--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h3>Test Title</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
             <div class="info">
-              <a href="#">Read more</a>
+              <a href="#header">Read more</a>
               <i class="fas fa-long-arrow-alt-right"></i>
             </div>
           </div>
@@ -118,7 +118,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="#header">Read More</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -129,7 +129,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="#header">Read More</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -140,7 +140,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="#header">Read More</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -151,7 +151,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="#header">Read More</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -162,7 +162,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="#header">Read More</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -173,7 +173,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="#header">Read More</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -184,7 +184,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="#header">Read More</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -239,19 +239,19 @@
           <div class="img-holder"><img src="image/features-01.jpg" alt="" /></div>
           <h2>Quality</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
-          <a href="#">More</a>
+          <a href="#header">More</a>
         </div>
         <div class="box time">
           <div class="img-holder"><img src="image/features-02.jpg" alt="" /></div>
           <h2>Time</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
-          <a href="#">More</a>
+          <a href="#header">More</a>
         </div>
         <div class="box passion">
           <div class="img-holder"><img src="image/features-03.jpg" alt="" /></div>
           <h2>Passion</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
-          <a href="#">More</a>
+          <a href="#header">More</a>
         </div>
       </div>
     </div>
@@ -367,16 +367,16 @@
           <div class="data">
             <img src="image/team-01.jpg" alt="" />
             <div class="social">
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-youtube"></i>
               </a>
             </div>
@@ -390,16 +390,16 @@
           <div class="data">
             <img src="image/team-02.jpg" alt="" />
             <div class="social">
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-youtube"></i>
               </a>
             </div>
@@ -413,16 +413,16 @@
           <div class="data">
             <img src="image/team-03.jpg" alt="" />
             <div class="social">
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-youtube"></i>
               </a>
             </div>
@@ -436,16 +436,16 @@
           <div class="data">
             <img src="image/team-04.jpg" alt="" />
             <div class="social">
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="#">
+              <a href="#header">
                 <i class="fab fa-youtube"></i>
               </a>
             </div>
