--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-    <meta name="description" content="تطبيق عملي لما تم تعلمه ">
+    <meta name="description" content="تطبيق عملي علي css and html ">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>eslam</title>
